[JIRA-7] feat: add Unit Test (#1)